fixed overflow scroll on categories

--- a/styles/guest.css
+++ b/styles/guest.css
@@ -18,7 +18,7 @@
 
         #listTwo {
             height: 70vh;
-            overflow-y: auto; !important;
+            overflow-y: scroll; !important;
         }
 
         label {
